--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
+    "dotenv-webpack": "^8.0.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "fs": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
